WIP: refactoring 2019